<resources>
    <string name="app_name">COMP4342 Mobile Computing Group Project</string>
    <string name="title_activity_admin_new_product">AdminNewProduct</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="qulity">It is now very easy to reach the\nbest quality among the\nproducts on the internet!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="top_icon">TOP ICON</string>
    <string name="Login">Let\'s Login</string>
    <string name="don_t_have_a_account_register">Don\'t have a account? Register</string>
    <string name="register">REGISTER</string>
    <string name="login">Login</string>

</resources>